# News_CLI_App

./: .env  Cargo.toml  LICENSE  README.md
news_api/: Cargo.toml
news_api/src/: lib.rs
src/: main.rs  theme.rs
