[package]
name = "news_app"
version = "0.1.0"
edition = "2021"
description="A simple CLI news reader app"
license="MIT"
authors=["Ashwith Chandra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
dotenv = "0.15.0"
news_api = { path = "./news_api", features = ["async"] }
termimad = "0.14.2"
tokio = {version = "1.11.0", features = ["full"] }

